fix: correction de l'alignement des élément de la page de logement

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 25px;
+    margin: 0 auto;
+    width: 95%;
     &__logo{
         width: 145px;
     }
@@ -22,6 +24,7 @@
     }
     @media screen and (min-width: 1200px) {
         padding: 45px 80px;
+        width: 100%;
         &__logo{
             width: 210px;
         }
